--- a/main.css
+++ b/main.css
@@ -1,78 +1,192 @@
 *{
-    margin:0;
+    margin:0 auto;
     padding:0;
     box-sizing:border-box;
     max-width: 1366px;
 }
 
 body{
-    background-color: #f7f7f7;
+    background-color: #ffffff;
+    
 }
 
-.container{
-    margin:0 auto;
-    max-width: 1366px;
-    display: grid;
+p{
+    color:#525252
 }
+
+strong{
+    color:black;
+    font-weight: 800;
+}
+
+.imagem-frente{
+    display: block;
+    height: auto;
+    width: 100%;
+    margin-top:100px
+}
+
+
 
 header{
     display: flex;
-    justify-content:space-between;
-    align-items: center;
-    padding: 40px;
+    padding: 40px 20px;
     font-family:'cursive','sans serif';
-    font-size:1.125rem;
+    font-size:1.2rem;
+    margin: 0 auto;
+    max-width: 1366px;
+    justify-content: space-between;
+    align-items: center;
+
 
 }
 
 header li{
     list-style:none;
     display: inline;
-    margin:0 20px;
     padding: 0.5rem;
     border-radius: 0.5rem;
     background-color:white;
     font-family: tahoma;
+    margin-right: 40px;
 
 }
 
 header li:hover{
-    background-color: #d8d8d8;
+    background-color: #f3e8e83a;
     cursor:pointer;
 }
 
-.logo img{
-    display: block;
-    width:100%;
-}
 
 .box1{
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap:10px;
-    margin:40px 0px 20px 20px;
+    margin:40px 0px 20px 10px;
     align-items: center;
+    position: relative;
+    margin:0 auto;
+    
 }
 
 .apresentacao h2{
-    font-size:4rem;
+    font-size:5rem;
     text-align: center;
 }
 
 .apresentacao p{
     font-size:1.5rem;
     text-align: center;
+    margin-top: 40px;
+}
+
+.apresentacao{
+    position: relative;
 }
 
 
 @media (max-width:700px){
-    header li{
-        display: flex;
-        display: block;
-        margin:10px 0;
+    header li {
+    display: flex;
+    margin:0 auto;
+    justify-content: left;
+    margin-bottom: 0.5rem;
     }
     .apresentacao h2{
-        font-size: 2rem;
+    font-size: 2rem;
     }
 }
 
+
+.detalhe::before{
+    content: "";
+    background:url(/img/detalhe.svg) no-repeat center;
+    display: block;
+    height: 120px;
+    width: 100%;
+    position:absolute;
+    top: -20px;
+    z-index:-1;
+    right:185px;
+    
+}
+
+@media (max-width:500px){
+    .detalhe::before{
+        height: 10px;
+        width: 20%;
+        left: 30px;
+        top:15px
+        
+    }
+}
+
+.grid-container{
+    margin: 0 auto;
+    max-width: 1366px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    justify-content: space-between;
+    align-items: center;
+    gap:200px;
+    margin-top:70px;
+}
+
+.experiencia{
+    font-size: 4.5rem;
+    text-transform: uppercase;
+    word-break: break-all;
+    max-width: 6ch;
+    line-height: 1;
+}
+
+.sobre-mim{
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.cargos li{
+    list-style: none;
+}
+
+.bikcraft{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top:50px;
+    background-color: #f5f5f5;
+    padding:20px;
+    border-radius:10px
+
+}
+
+.bikcraft li{
+    display:inline;
+}
+
+.surfbot{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top:50px;
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius:10px
+}
+.surfbot li{
+    display:inline;
+}
+
+.brafe{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top:50px;
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius:10px
+}
+.brafe li{
+    display:inline;
+    margin-right:10px
+}
